# clean-snake-wasm

./: Cargo.toml  README.md  index.html  style.css
snake_client/: Cargo.toml  index.html  style.css
snake_client/src/: lib.rs
snake_common/: Cargo.toml
snake_common/src/: lib.rs
snake_server/: Cargo.toml
snake_server/src/: main.rs
src/: lib.rs
