[package]
name = "snake_server"
version = "0.1.0"
authors = ["tfachmann <fachmanntj@gmail.com>"]
edition = "2018"


[dependencies]
num_cpus = "1.13"
smol = "1.2"
log = "0.4"
env_logger = "0.7"
async-tungstenite="0.13"
futures = "0.3"
bincode = "1.3"
snake_common = { path = "../snake_common" }
serde = { version = "1.0.124", features = ["derive"] }
serde_derive = "1.0.124"
thiserror = "1.0"
